<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2013, Yubico AB.  All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted provided that the following conditions
  ~ are met:
  ~
  ~ * Redistributions of source code must retain the above copyright
  ~   notice, this list of conditions and the following disclaimer.
  ~
  ~ * Redistributions in binary form must reproduce the above copyright
  ~   notice, this list of conditions and the following
  ~   disclaimer in the documentation and/or other materials provided
  ~   with the distribution.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND
  ~ CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES,
  ~ INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
  ~ MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~ DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS
  ~ BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
  ~ EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED
  ~ TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
  ~ DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
  ~ ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
  ~ TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF
  ~ THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
  ~ SUCH DAMAGE.
  -->

<resources>

    <string name="app_name">Yubico Authenticator</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warning">Warning</string>
    <string name="barcode_scanner_not_found">Barcode scanner not found, do you want to install it?</string>
    <string name="invalid_barcode">The scanned barcode is invalid</string>
    <string name="scan_failed">Barcode scanning failed</string>
    <string name="swipe">Tap your YubiKey</string>
    <string name="swipe_and_hold">Tap or insert your YubiKey</string>
    <string name="swipe_to_list">Tap your YubiKey to view credentials</string>
    <string name="swipe_to_put">Tap your YubiKey to store</string>
    <string name="totp">Oath TOTP</string>
    <string name="copy">Copy to clipboard</string>
    <string name="copied">Code copied to clipboard</string>
    <string name="prog_success">Credential added!</string>
    <string name="prog_fail">Failed to program the YubiKey</string>
    <string name="version">Version</string>
    <string name="tag_error">Error in YubiKey communication!</string>
    <string name="tag_error_retry">Error in YubiKey communication! Try again.</string>
    <string name="nfc_off">NFC is disabled!</string>
    <string name="no_nfc">This device seems to not support NFC</string>
    <string name="enable_nfc">Enable NFC</string>
    <string name="unsupported_applet_version">Unsupported YubiKey version, make sure this app is up to date!
    </string>
    <string name="applet_missing">Yubico Authenticator functionality not available on device!</string>
    <string name="credentials">Credentials</string>
    <string name="load_failed">Failed loading credentials</string>
    <string name="credential_name">Credential name</string>
    <string name="ok">OK</string>
    <string name="empty_list">Empty credentials list</string>
    <string name="enter_credential_name">Enter credential name</string>
    <string name="enter_secret_key">Enter secret key</string>
    <string-array name="credential_type">
        <item>Time based</item>
        <item>Counter based</item>
    </string-array>
    <string-array name="credential_algo">
        <item>SHA-1</item>
        <item>SHA-256</item>
        <item>SHA-512</item>
    </string-array>
    <string-array name="credential_digits">
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string name="credential_invalid_name">Invalid name</string>
    <string name="credential_invalid_secret">Invalid secret key, must be a base32 encoded value</string>
    <string name="credential_incomplete">Incomplete credentials</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="add_account_scan">Scan QR-code</string>
    <string name="add_account_manual">Manual entry</string>
    <string name="change_password">Change password</string>
    <string name="password_required">Password required</string>
    <string name="input_required">Enter the missing values, and press Save</string>
    <string name="yubikey">YubiKey</string>
    <string name="wrong_password">Incorrect password</string>
    <string name="copy_to_clipboard">Copy</string>
    <string name="read_hotp">Read a HOTP code</string>
    <string name="delete_cred">Delete credential</string>
    <string name="deleted">Credential deleted!</string>
    <string name="password">Password</string>
    <string name="old_password">Current password</string>
    <string name="new_password">New password (blank for none)</string>
    <string name="verify_password">Verify password</string>
    <string name="password_mismatch">Verify password doesn\'t match New password!</string>
    <string name="remember_password">Remember password</string>
    <string name="password_updated">Password updated!</string>
    <string name="display_name">Display name</string>
    <string name="clear">Clear</string>
    <string name="clear_data">Clear stored passwords</string>
    <string name="clear_data_message">This will clear all stored passwords from this device, prompting you to re-enter them when needed.</string>
    <string name="clear_countdown">Press %1$d times more to clear...</string>
    <string name="data_cleared">Stored passwords cleared!</string>
    <string name="storage_full">YubiKey OATH storage is full!</string>
    <string name="about">About</string>
    <string name="about_text"><![CDATA[
<p><b>About</b><br/>
Yubico Authenticator for Android<br/>
Version: %1$s</p>

<p><a href="https://developers.yubico.com/yubioath-android/">Web site</a><br/>
<br/><a href="https://github.com/Yubico/yubioath-android/">Source code</a><br/>
<br/><a href="http://www.youtube.com/watch?v=W7if0FW12D0">Demo video</a></p>

<p>Yubico Authenticator requires an NFC capable YubiKey with OATH functionality.</p>

<p>Copyright Yubico<br/>
<a href="http://www.yubico.com/">http://www.yubico.com/</a></p>]]></string>
    <string name="title_activity_new">NewActivity</string>
    <string name="action_settings">Settings</string>
    <string name="new_credential">New credential</string>
    <string name="search">Search</string>
    <string name="press_for_code">Press button for code…</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_fingerprint">Fingerprint lock</string>
    <string name="pref_description_fingerprint">Protect stored passwords with fingerprint</string>
    <string name="pref_title_memclear">Clear stored passwords…</string>
    <string name="pref_title_hide_thumbnail">Hide thumbnail</string>
    <string name="pref_description_hide_thumbnail">Don\'t show codes in the app thumbnail</string>
    <string name="pref_title_warn_nfc">NFC warnings</string>
    <string name="pref_description_warn_nfc">Warn when NFC is disabled or missing</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
